welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: not found: value setPose
    setPose(x,y)
    ^